UI:Redesigned signin and signup pages

--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,8 @@ code {
   --color-tertiary-tint1: #a3a3a3;
   --color-tertiary-tint2: #bdbdbd;
   --color-tertiary-tint3: #d4d4d4;
+  --color-tertiary-tint4: #f3f3f3;
+
 
   --color-danger-variant: rgb(254, 35, 7);
   
