--- a/src/styles/waitlist.css
+++ b/src/styles/waitlist.css
@@ -30,7 +30,7 @@
 
 .form_label {
     width: 50px;
-    font-size: medium;
+    font-size: 12px;
     font-weight: bold;
     padding-right: 10px;
     
@@ -38,7 +38,6 @@
 
 .form_input {
     padding: 10px;
-    border-radius: 5px;
     width: 95%;
     align-self:center;
 }
