--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -88,6 +88,12 @@
     font-size: 11px;
 }
 
+.form_select{
+    border-bottom: 1px solid var(--color-tertiary);
+    border-radius: 0;
+    font-size: 13px;
+}
+
 .sign_form {
     width: 100%;
     margin: auto;
