--- a/src/styles/waitlist.css
+++ b/src/styles/waitlist.css
@@ -52,6 +52,16 @@
     color: var(--color-tertiary-shade1);
 }
 
+.form_terms{
+  display: flex;
+  align-items: center;
+  margin: 1rem 0;
+}
+
+.form_terms_msg{
+    margin-left: 0.5rem;
+}
+
 .disabled{
     cursor: not-allowed;
 }
